# MatrixGraph

./: .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  bfs.cpp  bfs.cu  cpu_subiso.cpp  gar_match.cu  gemm.cpp  gemm.cu  pagerank.cu  ppr_query.cu  subiso.cu  wcc.cpp  wcc.cu  wrapper.h
cmake/: FindTBB.cmake
configs/: arangodb.yaml  config2.yaml
core/: CMakeLists.txt  matrixgraph.cu  matrixgraph.cuh
core/common/: consts.h  format_converter.h  host_algorithms.cuh  types.h  yaml_config.h
core/components/: data_mngr.h  execution_plan_generator.h  gpu_task_manager.cu  gpu_task_manager.cuh  host_producer.h  host_reducer.h  scheduler.h  task_generator.h
core/components/data_mngr/: data_mngr_base.h  tiled_matrix_mngr.h
core/components/scheduler/: CHBL_scheduler.h  even_split_scheduler.h  round_robin_scheduler.h  scheduler.h
core/data_structures/: bit_tile.cu  bit_tile.cuh  bit_tiled_matrix.cu  bit_tiled_matrix.cuh  csr_tiled_matrix.cu  csr_tiled_matrix.cuh  device_buffer.cuh  device_tiled_matrix.cuh  edgelist.cu  edgelist.h  exec_plan.cuh  gar_graph_arrays.h  gar_match_arrays.h  gar_pattern_arrays.h  grid_bit_tiled_matrix.cu  grid_bit_tiled_matrix.cuh  grid_csr_matrix.cu  grid_csr_matrix.cuh  grid_csr_tiled_matrix.cu  grid_csr_tiled_matrix.cuh  grid_tiled_matrix.cu  grid_tiled_matrix.cuh  heap.cuh  heap_test.cu  host_buffer.cuh  immutable_csr.cu  immutable_csr.cuh  immutable_csr.h  immutable_csr_gpu.cu  immutable_csr_gpu.cuh  match.h  matches.cuh  matrix.cu  matrix.cuh  metadata.h  mini_kernel_bitmap.cuh  rule.h  table.h  tiled_matrix.cu  tiled_matrix.cuh  (+5 more)
core/go_api/: matrixgraph_go_api.cu  matrixgraph_go_api.h
core/gpu/: device_func.cuh  global_func.cuh  host_func.cuh
core/gpu/kernel_data_structures/: kernel_bitmap.cuh  kernel_table.cuh  kernel_table.h
core/io/: bit_tiled_matrix_io.cu  bit_tiled_matrix_io.cuh  csr_tiled_matrix_io.cu  csr_tiled_matrix_io.cuh  grid_bit_tiled_matrix_io.cu  grid_bit_tiled_matrix_io.cuh  grid_csr_tiled_matrix_io.cu  grid_csr_tiled_matrix_io.cuh  grid_tiled_matrix_io.cu  grid_tiled_matrix_io.cuh
core/kernel/: gemm.cu  gemm.cuh
core/task/: bfs.cu  bfs.cuh  gemm.cu  gemm.cuh  matrix_multiplier.cu  matrix_multiplier.cuh  pagerank.cu  pagerank.cuh  ppr_query.cu  ppr_query.cuh  subiso.cu  subiso.cuh  task_base.cu  task_base.cuh  wcc.cu  wcc.cuh
core/task/cpu_task/: cpu_subiso.cu  cpu_subiso.cuh  cpu_task_base.h
core/task/gpu_task/: GARMatch.cu  GARMatch.cuh  bfs.cu  bfs.cuh  gar_match.cu  gar_match.cuh  gemm.cu  gemm.cuh  gemv.cu  gemv.cuh  matrix_analyzer.cuh  matrix_ops.cu  matrix_ops.cuh  pagerank.cu  pagerank.cuh  ppr_query.cu  ppr_query.cuh  subiso.cu  subiso.cuh  task_base.cu  task_base.cuh  wcc.cu  wcc.cuh
core/task/gpu_task/kernel/: kernel_bfs.cu  kernel_bfs.cuh  kernel_gar_match.cu  kernel_gar_match.cuh  kernel_gemm.cuh  kernel_matrix_ops.cu  kernel_matrix_ops.cuh  kernel_pagerank.cu  kernel_subiso.cuh  kernel_subsio.cu  kernel_wcc.cu  kernel_wcc.cuh  kernel_woj_subiso.cuh  kernel_woj_subsio.cu  matrix_operations.cu  matrix_operations.cuh
core/task/gpu_task/kernel/algorithms/: hash.cuh
core/task/gpu_task/kernel/data_structures/: exec_plan.cuh  immutable_csr_gpu.cu  immutable_csr_gpu.cuh  kernel_bitmap.cuh  matches.cuh  woj_exec_plan.cuh  woj_matches.cu  woj_matches.cuh
core/task/kernel/: gemm..cu  gemm.cuh  kernel_bfs.cu  kernel_bfs.cuh  kernel_pagerank.cu  kernel_pagerank.cuh  kernel_subiso.cuh  kernel_subsio.cu  kernel_wcc.cu  kernel_wcc.cuh  kernel_woj_subiso.cuh  kernel_woj_subsio.cu  matrix_operations.cu  matrix_operations.cuh
core/task/kernel/algorithms/: hash.cuh  sort.cuh
core/task/kernel/data_structures/: exec_plan.cuh  hash_buckets.cu  hash_buckets.cuh  heap.cuh  immutable_csr_gpu.cu  join_plan.cuh  kernel_bitmap.cuh  kernel_bitmap_no_ownership.cuh  matches.cuh  mini_kernel_bitmap.cuh  woj_exec_plan.cuh  woj_matches.cu  woj_matches.cuh
core/tests/: CMakeLists.txt
core/util/: atomic.h  bitmap.cu  bitmap.cuh  bitmap.h  bitmap_no_ownership.h  bitmap_ownership.h  cuda_check.cuh  execution_policy.h  format_converter.cuh  gpu_bitmap.cu  gpu_bitmap.cuh  logging.h  matrix.h  set_operations.h
data/DBLP-ACM/: DBLP-ACM_perfectMapping.csv  after_hyperblocker_blocking_test_data_for_ditto.txt
data/DBLP-ACM/rules/: 0.yaml
data/toy_graph/: test_graph.csv
docs/: README.md
docs/cpu_task/: subiso.md
docs/gpu_task/: gar_match.md  matrix_ops.md
docs/tools/: ArangoDBImport.md  ComputeF1.md  Embedding.md  FormatConverter.md  GenerateRandomGraph.md  GraphConverter.md  GraphPartitioner.md  Preprocessing4MatrixFilter.md  SubIsoTraining.md
examples/: CMakeLists.txt  basic_gemm.cu  run_sys.cu
tools/: CMakeLists.txt
tools/common/: bit_tiled_matrix_io.cu  bit_tiled_matrix_io.cuh  edgelist_subgraphs_io.cu  edgelist_subgraphs_io.cuh  format_converter.h  types.h
tools/docs/: ComputeF1.md  Embedding.md  GenerateRandomGraph.md  SubIsoTraining.md
tools/graph_converter/: CMakeLists.txt  graph_converter.cpp  graph_converter.cu
tools/graph_converter/converter/: grid_edgelist_2_bit_tiled_matrix.cuh  to_arangodb_json.cuh  to_bit_tiled_matrix.cuh  to_csr_tiled_matrix.cuh  to_edgelist.cuh  to_egsm_graph.cuh  to_grid_csr_tiled_matrix.cuh  to_immutable_csr.cuh  to_tiled_matrix.cuh
tools/graph_partitioner/: CMakeLists.txt  graph_partitioner.cpp  graph_partitioner.cu
tools/graph_partitioner/partitioner/: grid_cut.cu  grid_cut.cuh  hash_based_vertexcut.h  partitioner_base.h
tools/python/: GenerateRandomGraph.py  algorithms.py  batch_convert.sh  batch_mv.sh  batch_ops.sh  compute_f1.py  config.yaml  config_pokec.yaml  config_pokec_label_range_6.yaml  data.py  embedding.py  extract_elapsed_time.py  generate_random_graph.py  graph2geometric.py  merge.py  models.py  train.py  train_1000_2.log2  train_1000_2.log3  train_1000_2.log4  train_1000_2.log5  train_arguments.py  train_config.py
tools/python/custom_data/processed/: custom_data.pt
tools/train/: data.py  graph_reader.py  log  train.py
